# analytics_erp

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/raw/: METADADOS.txt  TABELAS_EXPORTADAS.txt  backup_metadata.json
src/: __init__.py  dashboard.py  data_loader.py  data_loader_helper.py  diagram_generator.py  mermaid_renderer.py  relationship_miner.py  schema_analyzer.py
