[project]
name = "analytics-erp"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Cavalcante dos Santos",email = "cavalcanteprofissional@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14.1 || >3.14.1"
dependencies = [
    "streamlit (>=1.28.0)",
    "networkx (>=3.0)",
    "matplotlib (>=3.7.0)",
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    "plotly (>=5.17.0)",
    "pyarrow (>=13.0.0)",
    "dask (>=2025.12.0,<2026.0.0)",
    "streamlit-agraph (>=0.0.45,<0.0.46)",
    "streamlit-drawable-canvas (>=0.9.3,<0.10.0)"
]

[tool.poetry]
packages = [{include = "analytics_erp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
